# witchcraft-win32

./: .gitignore  Cargo.toml  Makefile  README.md  downloadweights.py  index.cjs  install.cjs  nfcorpus-score.sh  package.json  requirements.txt  scifact-score.sh  score.py
assets/: LICENSE.txt
examples/: bench_hybrid.rs  pickbrain.rs
examples/pickbrain/: claude_code.rs  codex.rs  main.rs  watermark.rs
skills/pickbrain/: SKILL.md
skills/pickbrain-codex/: SKILL.md
src/: assets.rs  db.rs  embedder.rs  fast_ops.rs  fused_matmul.rs  haarops.rs  histogram.rs  lib.rs  main.rs  napi.rs  openvino_t5.rs  packops.rs  pickbrain.rs  priority.rs  progress_reporter.rs  quantized_t5.rs  rans64.rs  tests.rs  warp.rs
src/warp/: assets.rs  db.rs  embedder.rs  openvino_t5.rs  packops.rs  quantized_t5.rs  rans64.rs  sql_generator.rs
tools/: compare-spotlight-warp.sh
tools/compare-backends/: Cargo.toml
tools/compare-backends/src/: main.rs  openvino_t5.rs
tools/quantize-tool/: Cargo.toml
tools/quantize-tool/src/: main.rs
tools/t5-bench/: Cargo.toml
tools/t5-bench/src/: fused_matmul.rs  main.rs  quantized_t5.rs
ts/: warp.cjs
