[package]
name = "warp"
version = "0.1.0"
edition = "2024"

[[bin]]                         # !Dash
name = "warp-cli"               # !Dash
path = "src/main.rs"            # !Dash

[[bin]]                         # !Dash
name = "quantize-tool"          # !Dash
path = "src/quantize-tool.rs"   # !Dash

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
#candle-metal-kernels = { version = "0.9.1", optional = true }
candle-metal-kernels = { git = "https://github.com/huggingface/candle", rev="03e9ce0e7248002f150bf40bb647116361020381", optional=true }
metal = { version = "0.27.0", features = ["mps"], optional = true }
ug-metal = { version = "0.4.0", optional = true }
libc = { version = "0.2.147", optional = true }
anyhow = "*"
serde = "*"
serde_json = "*"

candle-core = { git = "https://github.com/huggingface/candle", rev="03e9ce0e7248002f150bf40bb647116361020381" }
candle-nn = { git = "https://github.com/huggingface/candle", rev="03e9ce0e7248002f150bf40bb647116361020381" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev="03e9ce0e7248002f150bf40bb647116361020381" }

tokenizers = "*"
serde_plain = "1.0.2"
rand = "0.9.1"
sha2 = "0.10.9"
indicatif = { version = "0.17.11", optional = true }

csv = "1.3.1"
tempfile = "3.20.0"

napi = "3.2.2"
napi-derive = "3.2.2"
once_cell = "1.21.3"
zstd = "0.13.3"
lru = "0.16.0"
tracing = "0.1.41"
safetensors = "0.6.2"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", rev="03e9ce0e7248002f150bf40bb647116361020381", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle", rev="03e9ce0e7248002f150bf40bb647116361020381", features = ["metal"] }

[build-dependencies]
napi-build = "2.2.3"

#[package.metadata.napi]
#ts-declarations = true

[features]
embed-assets = []
progress = ["dep:indicatif"]
accelerate = ["dep:libc", "dep:accelerate-src"]
metal = ["dep:metal", "dep:candle-metal-kernels", "dep:ug-metal"]

[dependencies.rusqlite]
version = "0.35.0"
features = ["bundled"]
