[package]
name = "witchcraft"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

[workspace]                     # !Dash
members = ["tools/quantize-tool", "tools/t5-bench", "tools/ov-stress", "tools/compare-backends"] # !Dash

[[bin]]                         # !Dash
name = "warp-cli"               # !Dash
path = "src/main.rs"            # !Dash

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
openvino = { version = "0.9.1", features = ["runtime-linking"], optional = true }
anyhow = "*"
serde = "*"
serde_json = "*"

candle-core = { git = "https://github.com/huggingface/candle", rev="0.10.1" }
candle-nn = { git = "https://github.com/huggingface/candle", rev="0.10.1" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev="0.10.1" }

tokenizers = "*"
serde_plain = "1.0.2"
rand = "0.9.1"
sha2 = "0.10.9"
indicatif = { version = "0.17.11", optional = true }

csv = "1.3.1"
tempfile = "3.20.0"

napi = { version = "3.2.2", optional = true }
napi-derive = { version = "3.2.2", optional = true }
once_cell = "1.21.3"
lru = "0.16.0"
tracing = "0.1.41"
safetensors = "0.6.2"
uuid = {version = "1.18.1", features = ["v5"] }
iso8601-timestamp = "0.3.3"
log = "0.4.28"
text-splitter = { version = "0.28.0", features = ["markdown"] } # !Dash
regex = "1"                # !Dash
chrono = "0.4"             # !Dash
lz4_flex = "0.11.5"
strsim = "0.11.1"
rayon = { version = "1", optional = true }
fbgemm-rs = { path = "fbgemm-rs", optional = true, features = ["rayon"] }

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace", "color"] }
ratatui = "0.29"
crossterm = "0.28"
libc = "0.2"

# Apple Silicon (ARM) - enable Metal support
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", rev="0.10.1", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle", rev="0.10.1", features = ["metal"] }
candle-metal-kernels = { git = "https://github.com/huggingface/candle", rev="0.10.1", optional=true }
metal = { version = "0.27.0", features = ["mps"], optional = true }
ug-metal = { version = "0.4.0", optional = true }
libc = { version = "0.2.147", optional = true }

# Intel (x86_64) - no Metal support, use Accelerate only
[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", rev="0.10.1", features = [] }
candle-nn = { git = "https://github.com/huggingface/candle", rev="0.10.1", features = [] }
libc = { version = "0.2.147", optional = true }

# Windows - priority management
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_Foundation"] }

[build-dependencies]
napi-build = "2.2.3"

[features]
#default = ["t5-quantized"]
#default = ["t5-openvino"]
napi = ["dep:napi", "dep:napi-derive"]
t5-quantized = []
t5-openvino = ["dep:openvino"]
embed-assets = []
progress = ["dep:indicatif"]
metal = ["dep:metal", "dep:candle-metal-kernels", "dep:ug-metal"]
hybrid-dequant = ["dep:rayon"]
fbgemm = ["dep:fbgemm-rs"]

[dependencies.rusqlite]
version = "0.35.0"
features = ["bundled"]
