[package]
name = "compare-backends"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "*"
csv = "*"

candle-core = { git = "https://github.com/huggingface/candle", rev="0.9.2-alpha.2" }
candle-nn = { git = "https://github.com/huggingface/candle", rev="0.9.2-alpha.2" }
candle-transformers = { git = "https://github.com/huggingface/candle", rev="0.9.2-alpha.2" }

tokenizers = "*"
serde = "*"
serde_json = "*"

# OpenVINO support (optional)
openvino = { version = "0.9.1", features = ["runtime-linking"], optional = true }
tempfile = "*"

# Warp with hybrid-dequant for comparison (fbgemm feature adds fbgemm-rs packed GEMM)
witchcraft = { path = "../..", default-features = false, features = ["t5-quantized", "hybrid-dequant", "fbgemm"], optional = true }

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", rev="0.9.2-alpha.2", features = ["metal"] }
accelerate-src = { version = "0.3.2", optional = true }

[target.'cfg(all(target_os = "macos", target_arch = "x86_64"))'.dependencies]
accelerate-src = { version = "0.3.2", optional = true }

[features]
accelerate = ["dep:accelerate-src"]
ov = ["dep:openvino"]
fbgemm = ["dep:witchcraft"]
